deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: myspace
spec:
  selector:
    app: demok8s-app
  ports:
    - protocol: TCP
      name: web
      port: 8188
      targetPort: 8188
  type: NodePort
